新增：生活可以查看前一次相关事件
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -227,7 +227,8 @@
   "life": {
     "event": "Event",
     "till": "till",
-    "now": "now"
+    "now": "now",
+    "previous": "Previous-Related"
   },
   "income": {
     "currency": "Show by Currency",
