新增：生活可以筛选全部相关事件
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -228,7 +228,9 @@
     "event": "Event",
     "till": "till",
     "now": "now",
-    "previous": "Previous-Related"
+    "previous": "Previous-Related",
+    "unselect": "Unfiltered",
+    "related": "All-Related"
   },
   "income": {
     "currency": "Show by Currency",
