新增：Instagram 和 小红书
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -199,7 +199,9 @@
     "youtube": "YouTube",
     "twitter": "Twitter",
     "linkedin": "LinkedIn",
-    "secret": "THIS IS A SECRET"
+    "secret": "THIS IS A SECRET",
+    "xiaohongshu": "XiaoHongShu",
+    "instagram": "Instagram"
   },
   "food": {
     "seen": "Seen and recorded",
