--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -199,7 +199,9 @@
     "youtube": "YouTube",
     "twitter": "Twitter",
     "linkedin": "LinkedIn",
-    "secret": "这是一个秘密"
+    "secret": "这是一个秘密",
+    "xiaohongshu": "小红书",
+    "instagram": "Instagram"
   },
   "food": {
     "seen": "见识并录入",
