优化：合并游戏页面相似信息
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -84,7 +84,9 @@
     "Origin": "Origin",
     "Epic": "Epic",
     "UPlay": "UbiSoft UPlay",
-    "WiiU": "Nintendo WiiU"
+    "WiiU": "Nintendo WiiU",
+    "accomplishstatus": "通关情况",
+    "trophystatus": "成就情况"
   },
   "fiction": {
     "title": "书名",
