--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -84,7 +84,9 @@
     "Origin": "Origin",
     "Epic": "Epic",
     "UPlay": "UbiSoft UPlay",
-    "WiiU": "Nintendo WiiU"
+    "WiiU": "Nintendo WiiU",
+    "accomplishstatus": "Accomplish Status",
+    "trophystatus": "Trophy Status"
   },
   "fiction": {
     "title": "Title",
