优化：饼图统计增加被动收入
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -254,6 +254,7 @@
     "10k": "(x10,000)",
     "advanced-year": "Advanced Income for Each Year",
     "advanced-platform": "Advanced Income for Platforms",
-    "balance": "Balance"
+    "balance": "Balance",
+    "basic-category-no-negative": "Negative amounts (e.g., tax, re-bill) are not included."
   }
 }
