修复：负数金额导致方块大小异常
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -255,6 +255,6 @@
     "advanced-year": "Advanced Income for Each Year",
     "advanced-platform": "Advanced Income for Platforms",
     "balance": "Balance",
-    "basic-category-no-negative": "Negative amounts (e.g., tax, re-bill) are not included."
+    "no-negative": "Negative amounts (e.g., tax, re-bill) are not included."
   }
 }
