优化：全新信用分页面
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -256,5 +256,9 @@
     "advanced-platform": "Advanced Income for Platforms",
     "balance": "Balance",
     "no-negative": "Negative amounts (e.g., tax, re-bill) are not included."
+  },
+  "credit": {
+    "source": "Source",
+    "model": "Model"
   }
 }
