--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -256,5 +256,9 @@
     "advanced-platform": "被动收入平台",
     "balance": "可用资产",
     "no-negative": "负数金额（例如税收、再分配）没有被统计。"
+  },
+  "credit": {
+    "source": "数据源",
+    "model": "模型"
   }
 }
