优化：可选显示得分范围和说明
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -259,6 +259,7 @@
   },
   "credit": {
     "source": "Source",
-    "model": "Model"
+    "model": "Model",
+    "range": "Show Range and Annotations"
   }
 }
