新增：允许在可用资产中选择是否包括未决款项
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -255,7 +255,8 @@
     "advanced-year": "Advanced Income for Each Year",
     "advanced-platform": "Advanced Income for Platforms",
     "balance": "Balance",
-    "no-negative": "Negative amounts (e.g., tax, re-bill) are not included."
+    "no-negative": "Negative amounts (e.g., tax, re-bill) are not included.",
+    "show-pending": "Also include pending balances"
   },
   "credit": {
     "source": "Source",
