新增：税收漏斗图
简易版，以后再完善

Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -256,7 +256,8 @@
     "advanced-platform": "Advanced Income for Platforms",
     "balance": "Balance",
     "no-negative": "Negative amounts (e.g., tax, re-bill) are not included.",
-    "show-pending": "Also include pending balances"
+    "show-pending": "Also include pending balances",
+    "tax-deduction": "Tax and Deductions"
   },
   "credit": {
     "source": "Source",
