--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -257,7 +257,9 @@
     "balance": "可用资产",
     "no-negative": "负数金额（例如税收、再分配）没有被统计。",
     "show-pending": "包括未决款项",
-    "tax-deduction": "税收和扣款项"
+    "tax-deduction": "税收和扣款项",
+    "taxable": "应税收入",
+    "after-what": "{what} 后"
   },
   "credit": {
     "source": "数据源",
