修复：预测线
预测线应该与主图表在同一图层，以确保使用主图表的坐标轴（而不是自己的坐标轴），且同时跟随滑块移动改变显示的区域

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -259,7 +259,9 @@
     "show-pending": "Also include pending balances",
     "tax-deduction": "Tax and Deductions",
     "taxable": "Taxable Income",
-    "after-what": "After {what}"
+    "after-what": "After {what}",
+    "prediction-line": "Prediction Line",
+    "average-line": "Average Line"
   },
   "credit": {
     "source": "Source",
