优化：独立显示累积收入汇总

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -258,11 +258,13 @@
     "balance": "Balance",
     "no-negative": "Negative amounts (e.g., tax, re-bill) are not included.",
     "show-pending": "Also include pending balances",
+    "show-accumulated": "Show accumulated incomes",
     "tax-deduction": "Tax and Deductions",
     "taxable": "Taxable Income",
     "after-what": "After {what}",
     "prediction-line": "Prediction Line",
-    "average-line": "Average Line"
+    "average-line": "Average Line",
+    "accumulated": "(ACCUMULATED)"
   },
   "credit": {
     "source": "Source",
