优化：日历图按年绘制子图
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -242,7 +242,14 @@
     "now": "now",
     "previous": "Previous-Related",
     "unselect": "Unfiltered",
-    "related": "All-Related"
+    "related": "All-Related",
+    "sun": "Sun",
+    "mon": "MON",
+    "tue": "Tue",
+    "wed": "Wed",
+    "thu": "Thu",
+    "fri": "Fir",
+    "sat": "Sat"
   },
   "income": {
     "show-original-amount": "Show Original Amount",
