--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -242,7 +242,14 @@
     "now": "今",
     "previous": "前一个相关事件",
     "unselect": "取消筛选",
-    "related": "全部相关事件"
+    "related": "全部相关事件",
+    "sun": "星期日",
+    "mon": "星期一",
+    "tue": "星期二",
+    "wed": "星期三",
+    "thu": "星期四",
+    "fri": "星期五",
+    "sat": "星期六"
   },
   "income": {
     "show-original-amount": "按原始数值展示",
