调整个人信息页布局，并更新内容
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -189,12 +189,14 @@
   },
   "introduction": {
     "true_name": "Name",
-    "nick_name": "Nickname",
-    "english_name": "English Name",
-    "birthday": "Birthday",
-    "location": "Location",
+    "english_name": "Name In English",
+    "nick_name": "Nick Name",
+    "english_nick_name": "Nick Name In English",
+    "birthday": "Date Of Birth",
+    "location": "Current Location",
     "role": "Role",
     "email": "Email",
+    "mobile": "Mobile",
     "qq": "QQ",
     "wechat": "WeChat",
     "github": "GitHub",
