--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -189,12 +189,14 @@
   },
   "introduction": {
     "true_name": "姓名",
+    "english_name": "英语姓名",
     "nick_name": "昵称",
-    "english_name": "英语名",
+    "english_nick_name": "英语昵称",
     "birthday": "生日",
-    "location": "位置",
+    "location": "现住址",
     "role": "角色",
     "email": "电子邮件",
+    "mobile": "联系电话",
     "qq": "QQ",
     "wechat": "微信",
     "github": "GitHub",
