修复：翻译缺失
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -213,7 +213,8 @@
     "linkedin": "LinkedIn",
     "secret": "THIS IS A SECRET",
     "xiaohongshu": "XiaoHongShu",
-    "instagram": "Instagram"
+    "instagram": "Instagram",
+    "blog": "Blog"
   },
   "food": {
     "seen": "Seen and recorded",
