--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -213,7 +213,8 @@
     "linkedin": "LinkedIn",
     "secret": "这是一个秘密",
     "xiaohongshu": "小红书",
-    "instagram": "Instagram"
+    "instagram": "Instagram",
+    "blog": "博客"
   },
   "food": {
     "seen": "见识并录入",
