更新 assets/lang/zh.json, assets/lang/en.json

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -58,8 +58,8 @@
     "rate": "Rate",
     "collection": "Collected and unlocked all elements",
     "achievement": "Achieved all accomplishments",
-    "cloud": "Watched videos",
-    "play": "Accomplished in person",
+    "cloud": "Watch(ing/ed) game videos",
+    "play": "Play(ing/ed) in person",
     "comment": "Review",
     "time": "Time (hours)",
     "done": "Accomplished",
@@ -85,7 +85,7 @@
     "Epic": "Epic",
     "UPlay": "UbiSoft UPlay",
     "WiiU": "Nintendo WiiU",
-    "accomplishstatus": "Accomplish Status",
+    "accomplishstatus": "Game Status",
     "trophystatus": "Trophy Status",
     "summary_count": "{count_total} game(s) in total: {count_done} is(are) done, {count_doing} is(are) doing, {count_todo} is(are) todo, and the rest is(are) in other status.",
     "summary_time": "{time_count} game(s) is(are) recorded with playing times: {time_total} hour(s) in total. The game with the longest playing hours is: {time_max_name} ({time_max} hour(s)).",
