--- a/assets/lang/zh.json
+++ b/assets/lang/zh.json
@@ -58,8 +58,8 @@
     "rate": "评分",
     "collection": "全要素收集",
     "achievement": "全成就达成",
-    "cloud": "云通关",
-    "play": "通关",
+    "cloud": "云游玩",
+    "play": "游玩",
     "comment": "简评",
     "time": "时长（小时）",
     "done": "已通关",
@@ -85,7 +85,7 @@
     "Epic": "Epic",
     "UPlay": "UbiSoft UPlay",
     "WiiU": "Nintendo WiiU",
-    "accomplishstatus": "通关情况",
+    "accomplishstatus": "游玩情况",
     "trophystatus": "成就情况",
     "summary_count": "共计 {count_total} 款游戏：{count_done} 款已通关，{count_doing} 款正在游戏中，{count_todo} 款正在计划中，其余为其他状态。",
     "summary_time": "{time_count} 款游戏有时长记录：累计 {time_total} 小时。游玩时间最长的游戏是：{time_max_name} （{time_max} 小时）。",
