优化：优化影视分类（增加“秀”）
秀指代真人秀、脱口秀、访谈、综艺等

Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -125,6 +125,7 @@
     "anime": "Anime",
     "documentary": "Documentary",
     "lecture": "Lecture",
+    "show": "Show",
     "done": "Watched/Listened",
     "done_at": "Watched/Listened on {date}",
     "doing": "Watching/Listening",
