优化：增加“弃坑”状态
以适配艺画开天的三体

Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -130,6 +130,7 @@
     "done_at": "Watched/Listened on {date}",
     "doing": "Watching/Listening",
     "todo": "Scheduling",
+    "aborted": "Aborted",
     "message": "Ratings and reviews are personal.",
     "warning": "This page may contain information about the plot.",
     "summary_count": "{count_total} number(s) of media in total: {count_done} is(are) done, {count_doing} is(are) doing, {count_todo} is(are) todo, and the rest is(are) in other status.",
