新增：Life 增加搜索框
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -254,7 +254,8 @@
     "wed": "Wed",
     "thu": "Thu",
     "fri": "Fir",
-    "sat": "Sat"
+    "sat": "Sat",
+    "search": "Enter something to search..."
   },
   "income": {
     "show-original-amount": "Show Original Amount",
