新增：允许切换收入子类目
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -260,6 +260,7 @@
   "income": {
     "show-original-amount": "Show Original Amount",
     "show-equivalent-cny": "Show Equivalent Amount in CNY",
+    "show-category-details": "Show Category Details",
     "open": "TGL",
     "close": "TGL",
     "basic-year": "Income for Each Year",
