新增：加权均值线
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -278,6 +278,7 @@
     "after-what": "After {what}",
     "prediction-line": "Prediction Line",
     "average-line": "Average Line",
+    "weighted-average-line": "Weighted Average Line",
     "accumulated": "(ACCUMULATED)"
   },
   "credit": {
