新增：允许隐藏预测线、均值线
Signed-off-by: jxtxzzw <jxtxzzw@126.com>

--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -272,6 +272,7 @@
     "balance": "Balance",
     "no-negative": "Negative amounts (e.g., tax, re-bill) are not included.",
     "show-pending": "Also include pending balances",
+    "show-annotation": "Show Annotation Lines",
     "show-accumulated": "Show accumulated incomes",
     "tax-deduction": "Tax and Deductions",
     "taxable": "Taxable Income",
